@@ -118,7 +118,7 @@ public class BlockMenuUtil {
                     continue;
                 }
 
-                final int received = Math.max(0, Math.min(item.getMaxStackSize() - existingAmount, leftAmount));
+                final int received = Math.clamp(item.getMaxStackSize() - existingAmount, 0, leftAmount);
                 leftAmount -= received;
                 existing.setAmount(existingAmount + received);
                 item.setAmount(leftAmount);
@@ -225,7 +225,7 @@ public class BlockMenuUtil {
                         continue;
                     }
 
-                    final int received = Math.max(0, Math.min(item.getMaxStackSize() - existingAmount, leftAmount));
+                    final int received = Math.clamp(item.getMaxStackSize() - existingAmount, 0, leftAmount);
                     leftAmount -= received;
                     existing.setAmount(existingAmount + received);
                     item.setAmount(leftAmount);
